# physicalai

./: .gitignore  .pre-commit-config.yaml  .semgrepignore  CITATION.cff  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: bandit_config.yml  renovate.json5
.github/workflows/: codeql.yml  dependency-review.yml  library.yml  publish-testpypi.yml  publish.yml  renovate-config-validator.yml  renovate.yml  scorecards.yml  security-scan.yml
docs/: index.md
docs/design/: README.md
docs/design/architecture/: architecture.md
docs/design/components/: camera-interface.md  inferencekit.md  proposal-robot-interface.md  robot-interface.md
docs/design/components/runtime-system/: README.md  design_review_summary.md  inference_comparison_report.md  policy_runtime_design.md  policy_server_design.md
docs/explanation/: configuration.md  inference.md
docs/getting-started/: installation.md  run-a-policy.md
docs/how-to/: README.md
docs/how-to/config/: write-runtime-config.md
docs/how-to/runtime/: run-policy-on-robot.md
docs/reference/: README.md  benchmark-api.md
examples/notebooks/: 001_Introduction.ipynb  003_OpenVINO_Optimization.ipynb  004_Test_Deployment_Without_Robot.ipynb  005_Model_finetuning_on_remote_machine.ipynb  README.md
examples/runtime/: async_inference.py  rtc_inference.py  sync_inference.py  utils.py
examples/tutorials/: 002_Using_Physical_AI_Studio.ipynb  003_OpenVINO_Optimization.ipynb  004_Test_Deployment_Without_Robot.ipynb  README.md  collect_train_deploy.ipynb  physicalai_pi05_helper.py  requirements.txt
src/physicalai/benchmark/performance/: __init__.py  inference_benchmark.py  input_sources.py
src/physicalai/capture/: README.md  __init__.py  camera.py  discovery.py  factory.py
src/physicalai/capture/cameras/basler/: _camera.py  _discover.py
src/physicalai/capture/cameras/realsense/: _camera.py  _discover.py
src/physicalai/capture/cameras/uvc/: _camera.py  _discover.py  _omnicamera.py
src/physicalai/capture/cameras/uvc/v4l2/: _camera.py  _discover.py
src/physicalai/capture/transport/: __init__.py  _header.py  _publisher_worker.py  _shared_camera.py
src/physicalai/cli/: _discovery.py  _spec.py  main.py  run.py
src/physicalai/inference/: README.md  __init__.py  manifest.py  model.py
src/physicalai/inference/adapters/: __init__.py  _discovery.py  openvino.py
src/physicalai/inference/callbacks/: __init__.py  rtc_latency.py
src/physicalai/inference/data/: __init__.py  features.py
src/physicalai/inference/postprocessors/: action_chunk_trimmer.py
src/physicalai/inference/preprocessors/: ov_tokenizer.py  pi05.py
src/physicalai/inference/runners/: factory.py
src/physicalai/robot/: README.md  __init__.py  interface.py
src/physicalai/robot/so101/: so101.py
src/physicalai/robot/trossen/: bimanual_widowxai.py  widowxai.py
src/physicalai/runtime/: __init__.py  _action_queue.py  _callback_bus.py  _rtc_action_queue.py  _telemetry.py  callbacks.py  events.py  execution.py  rtc_execution.py  runtime.py  smoothers.py
src/physicalai/runtime/observer/: __init__.py  __main__.py  _console.py  _recorder.py  _subscriber.py
tests/unit/benchmark/performance/: test_inference_benchmark.py
tests/unit/capture/: fake.py  test_omnicamera.py  test_transport.py  test_v4l2_discover.py
tests/unit/cli/: test_cli.py
tests/unit/inference/: test_adapters.py  test_callbacks.py  test_manifest.py  test_model.py
tests/unit/inference/postprocessors/: test_action_chunk_trimmer.py
tests/unit/robot/: test_bimanual_widowxai.py  test_protocol.py  test_verify_robot.py  test_widowxai.py
tests/unit/runtime/: conftest.py  test_action_queue.py  test_execution.py  test_fault_tolerance.py  test_observer.py  test_rerun_callback.py  test_runtime.py  test_smoothers.py  test_telemetry.py
