[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physicalai"
version = "0.2.0.dev0"
requires-python = ">=3.12, <3.15"
description = "Lightweight runtime for physical AI inference"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Intel Open Edge Platform" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "loguru>=0.7",
    # target PyTurboJPEG 1.x for libjpeg-turbo 2.x compatibility
    "PyTurboJPEG<2; sys_platform == 'linux'",
    "pynokhwa==0.1.2",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "opencv-python-headless",
    "transformers>=5.3.0,<5.4.0",
    "num2words>=0.5.14,<0.6.0",
    "safetensors>=0.4.3,<1.0.0",
    "onnxruntime",
    "openvino>=2026.0",
    "openvino_tokenizers>=2026.0",
    "jsonargparse[signatures,shtab]>=4.36",
]

[project.scripts]
physicalai = "physicalai.cli.main:main"
pai = "physicalai.cli.main:main"

[project.optional-dependencies]
tests = ["pytest", "mypy"]
notebooks = ["matplotlib", "matplotlib-inline", "ipykernel"]
realsense = [
    "pyrealsense2; sys_platform != 'darwin'",
    "pyrealsense2-macosx; sys_platform == 'darwin'",
]
basler = ["pypylon", "opencv-python-headless"]
transport = ["iceoryx2>=0.8"]
genicam = []
capture = [
    "physicalai[realsense]",
    "physicalai[basler]",
    "physicalai[genicam]",
    "physicalai[transport]",
]
ur = []
abb = []
franka = []
trossen = ["trossen-arm>=1.9.0"]
so101 = ["feetech-servo-sdk"]
observer-rerun = ["rerun-sdk>=0.22"]
robots = [
    "physicalai[ur]",
    "physicalai[abb]",
    "physicalai[franka]",
    "physicalai[trossen]",
    "physicalai[so101]",
]

[dependency-groups]
dev = ["pytest", "mypy", "pyrefly", "ruff>=0.15.12", "prek"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.6"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/openvinotoolkit/physicalai"
Documentation = "https://github.com/openvinotoolkit/physicalai/tree/main/docs"
Repository = "https://github.com/openvinotoolkit/physicalai"
Issues = "https://github.com/openvinotoolkit/physicalai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/physicalai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/physicalai/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "docs/**",
    "examples/**",
]

[tool.pyrefly]
python-version = "3.12"
ignore-missing-imports = ["*"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 120
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "notebooks",
]
src = ["src", "tests"]
extend-exclude = ["docs", "examples", "tests", "notebooks"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with Ruff formatter
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# physicalai.cli is intentionally a PEP 420 namespace package (no __init__.py)
# so the runtime and studio distributions can each contribute subcommands.
"src/physicalai/cli/*.py" = ["INP001"]
"src/physicalai/capture/transport/_header.py" = ["RUF012"]
"src/physicalai/capture/transport/_publisher.py" = ["S603"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-copyright]
notice-rgx = '# Copyright \(C\) (\d{4}(-\d{4})?) Intel Corporation\n# SPDX-License-Identifier: Apache-2\.0'

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.markdownlint]
default = true

[tool.markdownlint.MD001]
enabled = true

[tool.markdownlint.MD013]
line_length = 1000

[tool.markdownlint.MD024]
allow_different_nesting = true
siblings_only = true

[tool.markdownlint.MD033]
enabled = false

[tool.markdownlint.MD034]
enabled = false

[tool.markdownlint.MD036]
enabled = false

[tool.markdownlint.MD041]
enabled = false

[tool.markdownlint.MD042]
enabled = false

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "--showlocals", "-ra"]
testpaths = "tests"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_download: marks tests that require downloading external datasets",
    "integration: marks tests as integration tests",
    "v4l2: marks tests requiring V4L2 mocking (Linux only)",
    "transport: marks tests requiring iceoryx2",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "except ImportError:",
]

[tool.coverage.paths]
source = ["src"]
